# anchor

./: .gitignore  CMakeLists.txt  README.md  TESTING.md
benchmarks/: CMakeLists.txt  benchmark_simple.cpp
include/: anchor_linalg.h  dot_product.h  reduction.h  thread_pool.h  types.h
src/: dot_product.cpp  reduction.cpp  thread_pool.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_comparison.cpp  test_reproducibility.cpp
